ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mongo.com
      http:
        paths:
          pathtype:
          - backend:
              serviceName: mongo-express-service
              servicePort: 8081
